--- a/index.html
+++ b/index.html
@@ -117,16 +117,144 @@
                         </div>
                     </div>
                     <div class="main_slide_arrows">
-                        <button>
+                        <button class="left">
                             <span class="material-symbols-outlined">
                                 chevron_left
                             </span>
                         </button>
-                        <button>
+                        <button class="right">
                             <span class="material-symbols-outlined">
                                 chevron_right
                             </span>
                         </button>
+                    </div>
+                </div>
+                <span class="scroll_down">
+                    scroll
+                </span>
+            </section>
+            <section class="MainInfo default">
+                <h2 class="blind">main Info</h2>
+                <div class="inner">
+                    <div class="left">
+                        <h3>독도 바로 알기</h3>
+                        <p>독도의 역사를 배우고, 자연을 체험하며 독도영토주권<br />
+                            수호 의지를 다질 수 있는 소중한 시간이 되기를 바랍니다.
+                        </p>
+                        <div class="btn_area">
+                            <a href="" class="default_btn">
+                                <span>바로가기</span>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="right">
+                        <h3>관람 안내</h3>
+                        <div class="tit_area">
+                            <span class="material-symbols-outlined">
+                                brand_awareness
+                            </span>
+                            <a href="tel:044-999-6393" class="tel">044-999-6393</a>
+                            <a href="" class="qa">관람 문의하기</a>
+                        </div>
+                        <ul class="list">
+                            <li>
+                                <strong>관람시간</strong>
+                                <p>
+                                    화요일-토요일 9:00 ~ 17:00<br />
+                                    (점심시간 12:00~13:00, 입장마감 16:30)<br />
+                                    ※ 관람시간은 학교 사정에 따라 변경될 수 있습니다.
+                                </p>
+                            </li>
+                            <li>
+                                <strong>휴관안내</strong>
+                                <p>
+                                    일요일, 월요일 및 공휴일
+                                </p>
+                            </li>
+                            <li>
+                                <strong>위치</strong>
+                                <p>
+                                    세종특별자치시 새롬서로 68 새롬고등학교 1층
+                                </p>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
+            <section class="MainCustomer default">
+                <div class="inner">
+                    <div class="tit_area">
+                        <h2>공지사항</h2>
+                        <p>독도의 미래를 생각하는 공간으로<br />
+                            앞으로도 지속적으로 활용되기를 바랍니다.
+                        </p>
+                        <div class="main_customer_arrows">
+                            <button class="left">
+                                <span class="material-symbols-outlined">
+                                    chevron_left
+                                </span>
+                            </button>
+                            <button class="right">
+                                <span class="material-symbols-outlined">
+                                    chevron_right
+                                </span>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="slide_area">
+                        <div class="swiper main_notice_slide">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide itm">
+                                    <div class="img_box">
+                                        <img src="./images/sl03.jpg" alt="">
+                                    </div>
+                                    <span class="cate">news</span>
+                                    <strong>독도전시관 공사 기간 임시 휴관 안내</strong>
+                                    <p>
+                                        독도전시관 내부 공사 및 임시 휴관 안내<br />
+                                        공사기간 : 2023.12.19.(화) ~ 12.30.(토)<br />
+                                        안전을 위하여 기간 중 임시 휴관합니다. 많은 양해 부탁드립니다.
+                                    </p>
+                                </div>
+                                <div class="swiper-slide itm">
+                                    <div class="img_box">
+                                        <img src="./images/sl02.jpg" alt="">
+                                    </div>
+                                    <span class="cate">news</span>
+                                    <strong>독도전시관 공사 기간 임시 휴관 안내</strong>
+                                    <p>
+                                        독도전시관 내부 공사 및 임시 휴관 안내<br />
+                                        공사기간 : 2023.12.19.(화) ~ 12.30.(토)<br />
+                                        안전을 위하여 기간 중 임시 휴관합니다. 많은 양해 부탁드립니다.
+                                    </p>
+                                </div>
+                                <div class="swiper-slide itm">
+                                    <div class="img_box">
+                                        <img src="./images/sl01.jpg" alt="">
+                                    </div>
+                                    <span class="cate">news</span>
+                                    <strong>독도전시관 공사 기간 임시 휴관 안내</strong>
+                                    <p>
+                                        독도전시관 내부 공사 및 임시 휴관 안내<br />
+                                        공사기간 : 2023.12.19.(화) ~ 12.30.(토)<br />
+                                        안전을 위하여 기간 중 임시 휴관합니다. 많은 양해 부탁드립니다.
+                                    </p>
+                                </div>
+                                <div class="swiper-slide itm">
+                                    <div class="img_box">
+                                        <img src="" alt="">
+                                    </div>
+                                    <span class="cate">news</span>
+                                    <strong>독도전시관 공사 기간 임시 휴관 안내</strong>
+                                    <p>
+                                        독도전시관 내부 공사 및 임시 휴관 안내<br />
+                                        공사기간 : 2023.12.19.(화) ~ 12.30.(토)<br />
+                                        안전을 위하여 기간 중 임시 휴관합니다. 많은 양해 부탁드립니다.
+                                    </p>
+                                </div>
+
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
